<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/new_key_file_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/create_key_file"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_key_file"
        android:id="@+id/new_key_file"
        android:singleLine="true"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unlock_key"
        android:id="@id/unlock_key"
        android:singleLine="true"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_key"
        android:id="@id/confirm_key"
        android:singleLine="true"
        android:inputType="textPassword"/>
    
    <CheckBox
        android:id="@+id/chk_overwrite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_overwrite"
        android:layout_gravity="right"/>
</LinearLayout>